# veridian

./: .gitignore  arcium-docs.md  package.json  pnpm-lock.yaml  sample-code.md
solana/: Anchor.toml  init_comp_defs.ts  package.json  pnpm-lock.yaml
solana/encrypted-ixs/src/: determine_winner.rs  hand_eval.rs  lib.rs  reveal_community_cards.rs  shuffle_and_deal.rs
solana/programs/veridian-holdem/: Cargo.toml
solana/programs/veridian-holdem/src/: callbacks.rs  error.rs  lib.rs  state.rs
solana/programs/veridian-holdem/src/instructions/: admin.rs  crank_fold.rs  create_table.rs  deal_new_hand.rs  join_table.rs  leave_table.rs  mod.rs  player_action.rs  request_cards.rs
solana/tests/: poker.e2e.devnet.js  simple.test.js  veridian_holdem.ts
src/app/: layout.tsx  page.tsx
src/app/(main)/lobby/: page.tsx
src/app/(main)/table/[tableId]/: page.tsx
src/app/(main)/table/[tableId]/_components/: Actions.tsx  CommunityCards.tsx  PlayerPod.tsx  Table.tsx
src/components/game/: PlayingCard.tsx  PokerChip.tsx
src/components/providers/: GameStateProvider.tsx  SolanaProvider.tsx
src/lib/: arcium-helpers.ts  solana-helpers.ts
src/lib/hooks/: useGameState.ts
src/types/: index.ts
